objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>LiveMessage</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Manual Close</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting for Customer</fullName>
        </values>
        <values>
            <fullName>Waiting for Information</fullName>
        </values>
        <values>
            <fullName>Waiting for Transfer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vlocity_cmt__Billing</fullName>
        <description>There is a complaint about billing. This has to do with money.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vlocity_cmt__Service Problem</fullName>
        <description>There is something wrong with the service. This does not include Billing issues.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vlocity_cmt__Vlocity Support Process</fullName>
        <description>Vlocity Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Is_Retention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Retention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastAgent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResponsibleAgencyId__c</fullName>
        <label>ResponsibleAgencyId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponsibleAgency__c</fullName>
        <label>ResponsibleAgency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiebelLink__c</fullName>
        <formula>IF(  Account.CustomerRowId__pc=&apos;&apos; , &apos;&apos;, HYPERLINK($Setup.LiveMessageSettings__c.Siebel_Link__c+ Account.CustomerRowId__pc,$Setup.LiveMessageSettings__c.Siebel_Link__c+ 
Account.CustomerRowId__pc ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SiebelLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportOption__c</fullName>
        <label>SupportOption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsedLiveMessageNo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UsedLiveMessageNo</label>
        <referenceTo>LiveText__LiveText_Number__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WaitingForCustomer__c</fullName>
        <label>WaitingForCustomer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisputeId__c</fullName>
        <label>DisputeId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Dispute_ID__c</fullName>
        <label>Dispute ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FollowUpTo__c</fullName>
        <description>If this activity is a follow up to a previous activity.</description>
        <label>Follow Up To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IndicatorImageName__c</fullName>
        <description>Formula: Calculated &quot;indicator&quot; image name based on the priority and status of this Case. Used to display an indicator image on this case when shown in the user interface.</description>
        <formula>IF(TEXT(Priority)==&apos;High&apos; &amp;&amp; TEXT(Status)!= &apos;Closed&apos;, &apos;highpriorityopen&apos;, (IF(TEXT(Priority)==&apos;High&apos; &amp;&amp; TEXT(Status)==&apos;Closed&apos;, &apos;highpriorityclose&apos;, (IF(TEXT(Priority)==&apos;Medium&apos; &amp;&amp; TEXT(Status)!= &apos;Closed&apos;, &apos;mediumpriorityopen&apos;, (IF(TEXT(Priority)==&apos;Medium&apos; &amp;&amp; TEXT(Status) == &apos;Closed&apos;, &apos;mediumpriorityclose&apos;, (IF(TEXT(Priority)==&apos;Low&apos; &amp;&amp; TEXT(Status)!=&apos;Closed&apos;, &apos;lowpriorityopen&apos;, IF(TEXT(Priority)==&apos;Low&apos; &amp;&amp; TEXT(Status) ==&apos;Closed&apos;, &apos;lowpriorityclose&apos;,&apos;&apos; ))) )))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriorityImageName__c</fullName>
        <description>Formula: Calculated &quot;priority&quot; image name based on the priority of this Case. Used to display a priority image on this case when shown in the user interface.</description>
        <formula>TEXT(Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the service Asset which is the subject of this Case.</description>
        <label>Service ID</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Asset.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Asset.vlocity_cmt__BillingAccountId__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Asset.vlocity_cmt__ServiceAccountId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__Statement__c.vlocity_cmt__AccountId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__Statement__c</referenceTo>
        <relationshipLabel>Disputes</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement Line Item</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__StatementLineItem__c.vlocity_cmt__StatementId__r.vlocity_cmt__AccountId__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.vlocity_cmt__StatementId__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.vlocity_cmt__StatementId__c</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__StatementLineItem__c.vlocity_cmt__StatementId__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.vlocity_cmt__StatementId__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__StatementLineItem__c</referenceTo>
        <relationshipLabel>Disputes</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatusImageName__c</fullName>
        <description>Formula: Calculated &quot;status&quot; image name based on the status of this Case. Used to display a status image on this case when shown in the user interface.</description>
        <formula>TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Image Name</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <label>Alle Kundenvorgänge</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Alle_offenen_Kundenvorg_nge</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Alle offenen Kundenvorgänge</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Care_Service_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ResponsibleAgency__c</field>
            <operation>equals</operation>
            <value>Care Service</value>
        </filters>
        <label>Care Service</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Care_Technics_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ResponsibleAgency__c</field>
            <operation>equals</operation>
            <value>Care Technics</value>
        </filters>
        <label>Care Technics</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L1_OTT_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ResponsibleAgency__c</field>
            <operation>equals</operation>
            <value>L1 OTT</value>
        </filters>
        <label>L1 OTT</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LiveMessageLv1_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>LiveMessageLv1</label>
        <queue>LiveMessageLv1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Waiting_for_Information_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Waiting for Information</value>
        </filters>
        <label>My &apos;Waiting for Information&apos; Cases</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Retention_Service_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ResponsibleAgency__c</field>
            <operation>equals</operation>
            <value>Retention Service</value>
        </filters>
        <label>Retention Service</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Retention_Technics_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ResponsibleAgency__c</field>
            <operation>equals</operation>
            <value>Retention Technics</value>
        </filters>
        <label>Retention Technics</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Waiting_for_Information_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Waiting for Information</value>
        </filters>
        <label>&apos;Waiting for Information&apos; Cases</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2nd_Level_Service_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>2nd Level Service</label>
        <queue>X2nd_Level_Service</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2nd_Level_Technics_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>2nd Level Technics</label>
        <queue>X2nd_Level_Technics</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>LiveMessage</fullName>
        <active>true</active>
        <businessProcess>LiveMessage</businessProcess>
        <label>LiveMessage</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Billing</fullName>
        <active>true</active>
        <businessProcess>vlocity_cmt__Billing</businessProcess>
        <description>Billing complaint.</description>
        <label>Billing</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__MobilePhoneCase</fullName>
        <active>true</active>
        <businessProcess>vlocity_cmt__Vlocity Support Process</businessProcess>
        <description>Mobile Phone Case</description>
        <label>MobilePhoneCase</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Service</fullName>
        <active>true</active>
        <businessProcess>vlocity_cmt__Service Problem</businessProcess>
        <description>There is something wrong with the service provided or a product associated with that service.</description>
        <label>Service</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>